8150460: (linux|bsd|aix)_close.c: file descriptor table may become large or may not work at all

Reviewed-by: dsamersoff, rriggs